// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EllipsisText /> should match the snapshot 1`] = `
.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  display: inline;
  color: unset;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  color: unset;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c3 {
  position: relative;
  width: 100%;
  color: #2F3850;
}

<div>
  <div
    class="c0"
    width="100%"
  >
    <div
      class="c1"
      display="inline"
      width="100%"
    >
      <div
        class="c2"
        data-for=""
        data-tip=""
      >
        <div>
          <span
            class="c3"
            data-for=""
            theme="[object Object]"
            width="0"
          >
            <span />
            <span />
            <span
              style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
            >
              …
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EllipsisText /> should match the snapshot 2`] = `
.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  display: inline;
  color: unset;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  color: unset;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c3 {
  position: relative;
  width: 100%;
  color: #2F3850;
}

<div>
  <div
    class="c0"
    width="100%"
  >
    <div
      class="c1"
      display="inline"
      width="100%"
    >
      <div
        class="c2"
        data-for="Test"
        data-tip=""
      >
        <div>
          <span
            class="c3"
            data-for="Test"
            data-tip="Test"
            theme="[object Object]"
            width="0"
          >
            <span />
            <span>
              Test
            </span>
            <span
              style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
            >
              …
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
